<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_form"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/codigo_estudiante"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etCodEst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/codigo_ejemplo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/primer_nombre"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/et_primer_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ejemplo_primer_nombre"
            android:inputType="textPersonName"
            android:layout_marginBottom="12dp"
            /><!--ver inputType-->

        <CheckBox
            android:id="@+id/chk_habilitar_segundo_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tengo_segundo_nombre"/>

        <EditText
            android:id="@+id/et_segundo_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ejem_seg_nombre"
            android:inputType="textPersonName"
            android:enabled="false"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apellido_paterno"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/et_apellido_paterno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/ejem_rodriguez"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apellido_materno"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/et_apellido_materno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ejem_rodriguez"
            android:inputType="textPersonName"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_escuela"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="12dp"/>

        <Spinner
            android:id="@+id/spinner_escuelas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginBottom="24dp"
            />

        <TextView
            android:id="@+id/tv_titutlo_cursos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_asignaturas"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"
            android:visibility="visible"/>

        <TableLayout
            android:id="@+id/table_cursos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <TableRow
                android:background="#D1D5DB"
                android:padding="8dp">

                <TextView
                    android:text="@string/nombre_curso"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:text="@string/creditos"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"/>

                <TextView
                    android:text="@string/elegir"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/btn_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_registrar_matricula"
            android:textSize="16sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>